Fix: 일반 장바구니 주문 오류 해결 및 저장 로직 개선